--- a/css/styles.css
+++ b/css/styles.css
@@ -804,24 +804,8 @@
 }
 
 /* ***************** */
-/* SECTION PREFERENCES*/
+/* SECTION PREFERENCES****************** APP****/
 /* **************** */
-
-.ingredient-btn {
-  text-decoration: none;
-  font-size: 1.8rem;
-  padding: 6px 40px;
-  border-radius: 20px;
-  background-color: white;
-  border: none;
-  cursor: pointer;
-  color: #333;
-}
-
-/* .ingredients-buttons {
-  /* display: flex; */
-/* row-gap: 20px; */
-/* } */
 
 .section-preferences {
   background-color: #fdf2e9;
@@ -832,35 +816,56 @@
   padding-left: 13rem;
   width: 100%;
   margin-bottom: 4.8rem;
+  padding: 4.8rem;
 }
 
-.like-dislike-block {
-  display: inline-block;
-  justify-content: space-between;
-  margin-top: 40px;
-  margin-left: 40px;
-}
-
-.like-btn {
-  text-decoration: none;
-  font-size: 1.8rem;
-  padding: 10px 15px;
-  border-radius: 50%;
-  background-color: #51cf66;
-  border: none;
-  cursor: pointer;
-  color: white;
-  margin-right: 8px;
-}
-
-.dislike-btn {
+.btn-pref {
   text-decoration: none;
   font-size: 1.8rem;
   padding: 10px 17px;
-  border-radius: 50%;
-  background-color: rgb(255, 81, 81);
+  border-radius: 20px;
   border: none;
   cursor: pointer;
   color: white;
-  margin-left: 8px;
+  width: 40px;
+}
+.pref-item__exclude {
+  background-color: rgb(255, 81, 81);
+}
+
+.pref-item__include {
+  background-color: #51cf66;
+}
+
+.pref-ingredient__undone {
+  background-color: white;
+}
+
+.pref-ingredient {
+  text-decoration: none;
+  font-size: 1.8rem;
+  border-radius: 20px;
+  /* background-color: white; */
+  border: none;
+  color: #333;
+  /* width: 150px; */
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 0 1 180px;
+}
+
+.pref-list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  list-style: none;
+  width: 270px;
+}
+
+.pref-item {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
 }
